# CodeBase_Assistant

./: README.md
backend/: main.py  pyproject.toml  requirement.txt
backend/app/: config.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: analyze.py  respond.py  retrieve.py
backend/app/agents/tools/: router.py  search_file.py  suggest_diff.py
backend/app/api/: ask.py  ingest.py  projects.py  schema.py
backend/app/ingestion/: chunker.py  embedder.py  loader.py  store.py
backend/app/llms/: base.py  gemini.py  ollama.py
backend/app/rag/: retrieval.py
backend/app/services/: agent_service.py  ingestion_service.py  project_service.py
backend/app/utils/: github.py
backend/tests/: ingest_repo.py  llmtest.py  load_files.py  retrieval.py  test_agent.py
frontend/: package-lock.json  package.json
frontend/src/api/: ask.ts  client.ts  ingest.ts  projects.ts
frontend/src/components/: AnswerPanel.tsx  IngestForm.tsx  ProjectSelector.tsx  QuestionBox.tsx  ReasoningPanel.tsx
frontend/src/pages/: Home.tsx
frontend/src/types/: AskResponse.ts  Project.ts
