[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.56.0",
    "gunicorn>=23.0.0",
    "ipykernel>=7.1.0",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "supabase>=2.27.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "uvicorn>=0.40.0",
]
